--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
   "dependencies": {
     "cordova-android": "^7.0.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "es6-promise-plugin": "^4.2.2",
     "onesignal-cordova-plugin": "^2.4.4"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "android"
