--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "homepage": "https://github.com/CodeNews/app#readme",
   "dependencies": {
     "cordova-android": "^7.0.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "es6-promise-plugin": "^4.2.2",
@@ -41,7 +43,9 @@
     "plugins": {
       "cordova-plugin-whitelist": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android"
