add pull reload

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "openPage",
       "showdown",
       "CONFIG",
-      "alert"
+      "alert",
+      "PullToRefresh"
     ],
     "ignore": [
       "/www/lib/"
